<resources>
    <string name="noti_icon_1">Call</string>
    <string name="noti_icon_2">Camera</string>
    <string name="noti_icon_3">Calendar</string>
    <string name="noti_icon_4">Alarm</string>
    <string name="noti_icon_5">Settings</string>
    <string name="sap_notfound_package_msg">There is no connected app. Set up the app connection in \nmy<![CDATA[>]]> notification bar function.</string>
    <string name="notfound_app_msg">There is no connectable %1$s app</string>
    <string name="noti_icon_my">My</string>
    <string name="noti_icon_game">Game</string>
    <string name="noti_icon_fun">Fun</string>
    <string name="noti_icon_web_search">Web search</string>
    <string name="tab_bookmark">My app</string>
    <string name="tab_bookmark_title">My app list</string>
    <string name="tab_bookmark_sub_title">Long-touch the app icon to enable edit</string>
    <string name="tab_bookmark_recommend_title">My app recommended list</string>
    <string name="tab_empty_myapp_list_msg"><![CDATA[There is no registered "My App information."]]> \n <![CDATA[Please add your favorite apps to "My Apps".]]></string>
    <string name="tab_bookmark_add_title">Add my app</string>
    <string name="tab_bookmark_add_sub_title">Select favorate apps</string>
    <string-array name="bookmark_add_app_show_type">
        <item>Recent(by installation order)</item>
        <item>Default(by installation order)</item>
        <item>Ascending order(A-Z)</item>
        <item>Descending order(Z-A)</item>
    </string-array>
    <string name="tab_noti_title">Notification bar</string>
    <string name="tab_noti_sub_title">Select three frequently used functions</string>
    <string name="my_max_error">Three buttoms are already been selected</string>
    <string name="select_app">Set up an app to be used</string>
    <string name="my_save_error">Select more buttoms. \n more than three notification bar buttoms should be selected.</string>
    <string name="my_save_ok">It has been saved.</string>
    <string name="tab_skin">Skin</string>
    <string name="tab_skin_title">Notification bar skin</string>
    <string name="tab_skin_sub_title">Select and download a desired skin</string>
    <string name="tab_skin_store_title">Skin store</string>
    <string name="tab_skin_store_sub_title">Download desired skin</string>
    <string name="none_network_msg1">Network connection is not stable.</string>
    <string name="none_network_msg2">Try again later.</string>
    <string name="skin_down_wifi_msg">Wifi is not connected. \n if you continue, you may be charged according to your data plan.  \n proceed?</string>
    <string name="none_network_retry_msg">Try again</string>
    <string name="skin_down_msg">Download the notification skin?</string>
    <string name="skin_down_success_msg">Skin download completed.</string>
    <string name="skin_down_fail_msg">Failed to download the skin file. \n check your network connection.</string>
    <string name="skin_already_down_msg">It has already been downloaded.</string>
    <string name="setting_sub_title">Notification bar setting</string>
    <string name="sap_display">Notification window status bar ON/OFF</string>
    <string name="version">App version</string>
    <string name="search_version">2.0.0(Huvle)</string>
    <string name="setting_sync">Synchronization</string>
    <string name="setting_sync_msg">Proceed with a synchronization?</string>
    <string name="req_file_auth">File permissions are required!</string>
    <string name="action_add_bookmark">Add to the bookmark</string>
    <string name="action_page_find">Search within the page</string>
    <string name="sap_bookmark_add">It is now added to the bookmark.</string>
    <string name="sap_bookmark_already_add">It is already registered.</string>
    <string name="app_nm">Huvble search</string>
    <string name="action_new_tab">Open in a new tab</string>
    <string name="action_share">Share</string>
    <string name="action_history">Browsing history</string>
    <string name="action_bookmarks">Bookmark</string>
    <string name="action_copy">Copy URL</string>
    <string name="action_forward">Forward</string>
    <string name="action_open">Open</string>
    <string name="menu_download">Save image</string>
    <string name="download_pending">Download initiated</string>
    <string name="location">Allow access to your location(region)</string>
    <string name="dialog_download">Will you download %1$s the file?</string>
    <string name="title_warning">Warning</string>
    <string name="message_text_copied">The text has been copied to the clipboard.</string>
    <string name="message_link_copied">The link has been copied to the clipboard.</string>
    <string name="message_blocked_local">The local file was blocked on loading.</string>
    <string name="suggestion">Search</string>
    <string name="message_untrusted_certificate">The site certificate is not valid. Do you want to continue?</string>
    <string name="title_form_resubmission">Resend the form</string>
    <string name="message_form_resubmission">Will you resend the data?</string>
    <string name="message_location">\n Will you use the user\'s location?</string>
    <string name="action_allow">Allow</string>
    <string name="action_dont_allow">Do not allow</string>
    <string name="title_sign_in">Register</string>
    <string name="hint_username">User name</string>
    <string name="hint_password">Password</string>
    <string name="title_file_chooser">Select file</string>
    <string name="sap_browser_search_text">Recommend</string>
    <string name="menu_nightmode">Nightmode</string>
    <string name="memo_page">This is a comment page</string>
    <string name="memo_page_connection_failure_msg">Comments can be made after the current page is fully loaded.</string>
    <string name="sap_setting_down_mkdir_title">Add folder</string>
    <string name="sap_setting_down_new_dir_txt">New folder</string>
    <string name="sap_setting_down_no_dir_txt">There is no folder</string>
    <string name="sap_setting_down_mkdir_success_msg">Create folder</string>
    <string name="sap_setting_down_rename_dir_success_msg">Edit folder</string>
    <string name="sap_setting_down_delete_dir_success_msg">Delete folder</string>
    <string name="sap_setting_down_mkdir_fail_msg">Same folder already exist</string>
    <string name="sap_setting_down_delete_fail_msg">The folder cannot be deleted</string>
    <string name="sap_setting_down_mkdir_empty_dir_name_msg">Insert folder name</string>
    <string name="sap_setting_down_modify_dir_title">Edit folder name</string>
    <string name="sap_setting_down_del_confirm_msg">All files in the folder will be deleted. Delete the \n folder?</string>
    <string name="sap_setting_down_dir_name_validate_msg">Only English, numbers, Korean, and \n special characters in the bracket ( <![CDATA["-, _"]]> ) can be used to create a folder name.</string>
    <string name="sap_setting_down_dir_start_name_validate_msg">You cannot have the folder name \n starting with <![CDATA["."]]>.</string>
    <string name="cannot_download">Only files in \"http\" or \"https\" path can be downloaded.</string>
    <string name="download_no_sdcard_dlg_title">There is no SD card.</string>
    <string name="download_no_sdcard_dlg_msg">USB device is needed to save the file.</string>
    <string name="download_sdcard_busy_dlg_title">This USB device is not usable.</string>
    <string name="download_sdcard_busy_dlg_msg">The storage is in use. To allow download, turn off USB device in the alarm bar.</string>
    <string name="sap_setting_web_view_type">The web display mode setting</string>
    <string name="agent_default">Default</string>
    <string name="agent_desktop">Desktop</string>
    <string name="agent_mobile">Mobile</string>
    <string name="agent_custom">User customization</string>
    <string name="title_user_agent">User customization</string>
    <string name="sap_setting_lang">Browser language setting</string>
    <string name="sap_setting_voice_lang">Voice search setting</string>
    <string name="sap_setting_voice_lang_engine">Voice search engine setting</string>
    <string name="google">Google</string>
    <string name="baidu">Baidu</string>
    <string name="sap_setting_voice_lang_input">Language setting for the voice search input</string>
    <string name="lang_ch">Chinese</string>
    <string name="lang_kr">Korean</string>
    <string name="lang_en">English</string>
    <string name="lang_vi">Vietnam</string>
    <string name="sap_setting_download_path">Download directory</string>
    <string name="sap_setting_home">Homepage setting</string>
    <string name="title_custom_homepage">User homepage</string>
    <string name="action_blank">Blank page</string>
    <string name="action_webpage">Web page</string>
    <string name="sap_setting_search">Search engine setting</string>
    <string name="custom_url">User-Customized URL</string>
    <string name="search_google">Google</string>
    <string name="search_huvle">Huvle</string>
    <string name="search_naver">Naver</string>
    <string name="search_daum">Daum</string>
    <string name="search_nate">Nate</string>
    <string name="search_baidu">Baidu</string>
    <string name="search_yahoo">Yahoo</string>
    <string name="advanced">Advanced setting</string>
    <string name="home">Homepage setting</string>
    <string name="http_proxy_title">HTTP Proxy</string>
    <string name="password">Save password</string>
    <string name="recommended">Recommendation</string>
    <string name="cache">Delete temporary internet file(cache) when the browser is closed</string>
    <string name="clear_history_exit">Delete browsing history when the browser is closed</string>
    <string name="clear_cookies_exit">Delete web cookies when the browser is closed</string>
    <string name="java">Allow JavaScript</string>
    <string name="block">Block image</string>
    <string name="window">Open the site in a new window</string>
    <string name="cookies">Allow cookies</string>
    <string name="clear_cookies">Delete cookies</string>
    <string name="incognito_cookies">Allow cookies in the anonymous mode</string>
    <string name="wideViewPort">Mobile landscape mode</string>
    <string name="restore">Restore tab at startup</string>
    <string name="fullScreenOption">Hide status bar when using</string>
    <string name="google_suggestions">Recommended search</string>
    <string name="powered_by_google">Powered by Google</string>
    <string name="clear_cache">Delete internet temporary file</string>
    <string name="message_cache_cleared">Internet temporary file deleted</string>
    <string name="history">Delete browsing history</string>
    <string name="dialog_history">Delete all browsing history?</string>
    <string name="message_clear_history">Browsing history deleted</string>
    <string name="dialog_cookies">Delete all cookies?</string>
    <string name="message_cookies_cleared">Cookies deleted</string>
    <string name="size">Font size</string>
    <string name="http_proxy_choice_none">None</string>
    <string name="http_proxy_choice_huvle">HUVLE</string>
    <string name="user_define_proxy_title">Define Proxy</string>
    <string name="user_define_proxy_host_empty_msg">Input host information</string>
    <string name="user_define_proxy_port_empty_msg">Input port information</string>
    <string name="title_text_size">Font size</string>
    <string name="qrcode">QR code</string>
    <string name="history_bookmarks">Record/bookmark</string>
    <string name="share">Share</string>
    <string name="incognito">Anonymous mode</string>
    <string name="link_copy">Copy link</string>
    <string name="tab">Tab management</string>
    <string name="menu_capture">Screen capture</string>
    <string name="menu_addhome">Add to the homepage</string>
    <string name="cmn_action_edit">Edit</string>
    <string name="cmn_action_delete">Delete</string>
</resources>