<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/popup_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sap_his_list_new_tab"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="@drawable/res_sap_web_long_tab_list_bg"
            android:gravity="left|center_vertical"
            android:lineSpacingExtra="7dp"
            android:paddingLeft="13.3dp"
            android:paddingRight="10dp"
            android:text="@string/action_new_tab"
            android:textColor="@color/sap_common_dialog_txt"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/sap_his_list_modify_tab"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="@drawable/res_sap_web_long_tab_list_bg"
            android:gravity="left|center_vertical"
            android:lineSpacingExtra="7dp"
            android:paddingLeft="13.3dp"
            android:paddingRight="10dp"
            android:text="@string/cmn_action_edit"
            android:textColor="@color/sap_common_dialog_txt"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/sap_his_list_copy_link_tab"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="@drawable/res_sap_web_long_tab_list_bg"
            android:gravity="left|center_vertical"
            android:lineSpacingExtra="7dp"
            android:paddingLeft="13.3dp"
            android:paddingRight="10dp"
            android:text="@string/action_copy"
            android:textColor="@color/sap_common_dialog_txt"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/sap_his_list_delete_tab"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="@drawable/res_sap_web_long_tab_list_bg"
            android:gravity="left|center_vertical"
            android:lineSpacingExtra="7dp"
            android:paddingLeft="13.3dp"
            android:paddingRight="10dp"
            android:text="@string/cmn_action_delete"
            android:textColor="@color/sap_common_dialog_txt"
            android:textSize="14sp" />

    </LinearLayout>


</RelativeLayout>