<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="230dp"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/popup_title_bg">
        <TextView
            android:id="@+id/sap_longtab_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:gravity="left|center_vertical"
            android:lineSpacingExtra="2dp"
            android:paddingLeft="13.3dp"
            android:singleLine="true"
            android:lines="1"
            android:paddingRight="10dp"
            android:textColor="@android:color/white"
            android:textSize="11sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/link_popup_white_bg"
        android:orientation="vertical">

        <TextView
            android:id="@+id/sap_longtab_open"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="@drawable/res_sap_web_long_tab_list_bg"
            android:gravity="left|center_vertical"
            android:lineSpacingExtra="7dp"
            android:paddingLeft="13.3dp"
            android:paddingRight="10dp"
            android:text="@string/action_open"
            android:textColor="@color/sap_common_dialog_txt"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/sap_longtab_copy_link"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="@drawable/res_sap_web_long_tab_list_bg"
            android:gravity="left|center_vertical"
            android:lineSpacingExtra="7dp"
            android:paddingLeft="13.3dp"
            android:paddingRight="10dp"
            android:text="@string/action_copy"
            android:textColor="@color/sap_common_dialog_txt"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/sap_longtab_download"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="@drawable/res_sap_web_long_tab_list_bg"
            android:gravity="left|center_vertical"
            android:lineSpacingExtra="7dp"
            android:paddingLeft="13.3dp"
            android:paddingRight="10dp"
            android:text="@string/menu_download"
            android:textColor="@color/sap_common_dialog_txt"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/sap_longtab_new_tab"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_centerInParent="true"
            android:background="@drawable/res_sap_web_long_tab_list_bg"
            android:gravity="left|center_vertical"
            android:lineSpacingExtra="7dp"
            android:paddingLeft="13.3dp"
            android:paddingRight="10dp"
            android:text="@string/action_new_tab"
            android:textColor="@color/sap_common_dialog_txt"
            android:textSize="14sp" />
    </LinearLayout>
</LinearLayout>

